--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "cstructimpl"
 version = "0.1.0"
 description = "Python package to translate C struct to classes"
+requires-python = ">=3.10"
 dependencies = []
 authors = [
     {name = "Brendon Mendicino"}
