--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cstructimpl"
-version = "0.2.0"
+version = "0.3.0"
 description = "Python package to translate C struct to classes"
 requires-python = ">=3.10"
 dependencies = []
@@ -15,11 +15,24 @@ readme = "README.md"
 license = "Apache-2.0"
 classifiers = [
     "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Libraries",
+    "Topic :: Software Development :: Code Generators",
+    "Topic :: Utilities",
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Typing :: Typed",
+
 ]
 
 [project.optional-dependencies]
 dev = ["pytest"]
 
 [project.urls]
-Repository = "https://github.com/Brendon-Mendicino/c_struct"
-Issues = "https://github.com/Brendon-Mendicino/c_struct/issues"
+Repository = "https://github.com/Brendon-Mendicino/cstructimpl"
+Issues = "https://github.com/Brendon-Mendicino/cstructimpl/issues"
